corrected menu and order alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,14 +10,12 @@ h1 {
   position: absolute;
   left: 40%;
   top: 200px;
-  /*width: 100%;*/
 }
 
 .button-order {
   position: absolute;
   left: 50%;
   top: 350px;
-  /*width: 100%;*/
 }
 
 .navbar-inverse{
@@ -25,22 +23,20 @@ h1 {
   color: #337ab7;
 }
 
-.Menu {
+.menu {
   background-color: blue;
-
-}
-
-.order {
-  background-color: yellow;
 }
 
 .food {
   border: 1px grey solid;
 }
 
+.order {
+  background-color: yellow;
+}
+
 .totals {
   height: 150px;
   width: 150px;
   float: right;
-
 }
